--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 <div id="profile">
 <div class="about">
-<div class="profile-photo"><img src="images/profile-picture.png" width="140" height="174" /></div>
+<div class="profile-photo"><img src="images/profile-picture.PNG" width="140" height="174" /></div>
 <h1>SHIVANI BAKSHI</h1>
 <h3><i>Student | Aspiring Developer</i></h3>
 <p>An aspiring developer with good problem-solving skills and passion for learning. I am currently a student of Masters of Computer Aplications at IGDTUW.</p>
